Bug #74127 Reports Drop-Box Formating
Text in dropdown was being cut off in Firefox.

--- a/app/assets/stylesheets/app/reports.scss
+++ b/app/assets/stylesheets/app/reports.scss
@@ -55,21 +55,6 @@
     padding-bottom: 2px !important;
   }
 
-  .datepicker, #date_range_field {
-    height: 23px;
-    border: 1px solid #AAAAAA;
-  }
-  #date_range_field {
-    margin-top: 3px;
-  }
-  button {
-    margin-top: 1em;
-    color: black !important;
-    font-weight: normal !important;
-    background: #EFEFEF !important;
-    border: 1px solid #C1C1C1 !important;
-  }
-
   #tabs {
     clear: both;
   }
